fixed contact container spillover issue

--- a/public/CSS/style.css
+++ b/public/CSS/style.css
@@ -255,7 +255,7 @@
   width: auto;
   background-image: url("/images/instabridge_grey.png");
   background-position: center;
-  background-size: cover;
+  background-size: 100% 100% ;
 }
 .andrew-div{
   height: 100%;
@@ -268,11 +268,11 @@
   background-size: cover;
 
   border-radius: 20px;
-  height: 85%;
+  height: 65%;
   width: 75%;
   position:absolute;
-  top:0;
-  left: 0px;
+  top:5%;
+  left: 15%;
   background-color: turquoise;
 
 }
@@ -283,17 +283,17 @@
   background-size: cover;
 
   border-radius: 20px;
-  height: 85%;
+  height: 65%;
   width: 75%;
   position:absolute;
-  top:0;
-  left: 0px;
+  top:5%;
+  left: 15%;
   clip-path: polygon(100% 28%, 0 28%, 74% 100%);}
 
 
   .arrow-div{
-    height: 35vh;
-    widths: 100%;
+    height: 25vh;
+    width: 100%;
   }
 
   #arrow{
@@ -309,33 +309,51 @@
     50%      { bottom:35px; }
     100%     {bottom:0;}
   }
-  .form-div{
+
+  form label{
+    color:orange;
+    font-weight: bolder;
+    font-family:'Shrikhand', cursive; ;
+    font-size: 2vw;
 
   }
+@media screen and (max-width:990px){
+    form label{
+      color:orange;
+     font-weight: bolder;
+      font-family:'Shrikhand', cursive; ;
+      font-size: 2.65vw;
 
+    }
+}
   .scroll-div {
-    height: 20vh; 
+    height: 15vh; 
     overflow: hidden;
     position: relative;
     background-color: black;
     color:white;
-    font-size: 3rem;
+    font-size: 4vw;
     }
     .scroll-div p {
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    margin: 0;
-    line-height: 50px;
-    text-align: center;
+      font-family:'Monoton', cursive;
+      word-spacing: 1vw;
+      position: absolute;
+      width: 100%;
+      height: 100%;
+      margin: 1% 0 0 0;
+      line-height: 50px;
+      text-align: center;
+      font-family:'Monoton', cursive;
+      word-spacing: 1vw;
+      color: orange;
     /* Starting position */
-    -moz-transform:translateX(100%);
-    -webkit-transform:translateX(100%); 
-    transform:translateX(100%);
+      -moz-transform:translateX(100%);
+      -webkit-transform:translateX(100%); 
+      transform:translateX(100%);
     /* Apply animation to this element */ 
-    -moz-animation: scroll-left 10s linear infinite;
-    -webkit-animation: scroll-left 10s linear infinite;
-    animation: scroll-left 10s linear infinite;
+      -moz-animation: scroll-left 10s linear infinite;
+      -webkit-animation: scroll-left 10s linear infinite;
+      animation: scroll-left 10s linear infinite;
     }
     /* Move it (define the animation) */
     @-moz-keyframes scroll-left {
@@ -358,3 +376,10 @@
     transform: translateX(-100%); 
     }
     }
+
+    @media only screen and (max-width:576px){
+      .scroll-div {
+        height: 10vh;
+      }
+    }
+
